// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`US-010: Render base generated homepage structure > snapshot stability > generateSite snapshot for seed "snap-us010-alpha" 1`] = `
{
  "abandonmentDetails": [
    {
      "cssClass": "abandonment-partner-logos",
      "id": "defunct-partner-logo",
      "label": "In association with Yahoo! GeoCities",
    },
    {
      "cssClass": "abandonment-missing-asset",
      "id": "missing-asset-placeholder",
      "label": "[Banner image unavailable]",
    },
    {
      "cssClass": "abandonment-browser-notice",
      "id": "deprecated-browser-notice",
      "label": "Best viewed in Internet Explorer 5.0 at 800x600",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "broken-badge",
      "label": "Hosted on Geocities",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "broken-badge",
      "label": "Valid HTML 4.01 Transitional",
    },
  ],
  "archetype": {
    "compatibleEraIds": [
      "early-web",
      "portal-era",
      "web2",
      "alt-timeline",
    ],
    "compatibleRegionIds": [
      "en-us",
      "de-de",
      "en-gb",
    ],
    "description": "A hobbyist personal page with links, interests, and a guestbook",
    "id": "personal-homepage",
    "label": "Personal Homepage",
  },
  "backgroundPattern": {
    "css": "#ffffff",
    "dark": false,
    "id": "ew-none",
  },
  "era": {
    "designCues": {
      "colors": [
        "#000080",
        "#C0C0C0",
        "#FFFF00",
        "#FF00FF",
        "#008080",
      ],
      "layoutPatterns": [
        "single-column",
        "table-layout",
        "frames",
      ],
      "typography": [
        "Times New Roman",
        "Comic Sans MS",
        "Courier New",
      ],
      "uiElements": [
        "marquee",
        "bevel-buttons",
        "horizontal-rule",
        "animated-gifs",
        "hit-counter",
      ],
    },
    "id": "early-web",
    "label": "Early Web",
    "vocabularyCues": [
      "under construction",
      "welcome to my homepage",
      "guestbook",
      "webring",
      "best viewed in",
      "click here",
      "last updated",
      "site map",
    ],
    "yearEnd": 1999,
    "yearStart": 1995,
  },
  "metadata": {
    "closureReason": "Regulatory changes made operations unviable",
    "siteName": "Weltgruppe Medien",
    "statusLabel": "No longer maintained",
    "summary": "Weltgruppe Medien is where I share my projects, thoughts, and links. I update this page when I feel like it, which is honestly not that often, but everything here was made with care.",
    "tagline": undefined,
    "yearFounded": 1996,
  },
  "region": {
    "currencySymbol": "€",
    "id": "de-de",
    "label": "Germany",
    "language": "de",
    "tld": ".de",
    "vocabularyOverrides": {
      "About": "Über uns",
      "Contact": "Kontakt",
      "Download": "Herunterladen",
      "Home": "Startseite",
      "Legal": "Impressum",
      "Login": "Anmelden",
      "News": "Nachrichten",
      "Privacy": "Datenschutz",
      "Register": "Registrieren",
      "Search": "Suche",
    },
  },
  "seed": "snap-us010-alpha",
  "theme": {
    "borders": {
      "color": "#808080",
      "radius": 0,
      "style": "outset",
      "width": 2,
    },
    "id": "early-web",
    "label": "Early Web",
    "palette": {
      "accent": "#FFFF00",
      "background": "#FFFFFF",
      "muted": "#808080",
      "primary": "#000080",
      "secondary": "#C0C0C0",
      "surface": "#C0C0C0",
      "text": "#000000",
    },
    "spacing": {
      "large": 16,
      "medium": 8,
      "sectionGap": 24,
      "small": 4,
      "unit": 4,
    },
    "surfaces": {
      "background": "solid",
      "shadow": "none",
      "texture": "",
    },
    "typography": {
      "baseFontSize": 14,
      "fontFamily": "Times New Roman, serif",
      "headingFont": "Comic Sans MS, cursive",
      "headingWeight": 700,
      "lineHeight": 1.4,
      "monoFont": "Courier New, monospace",
    },
  },
}
`;

exports[`US-010: Render base generated homepage structure > snapshot stability > generateSite snapshot for seed "snap-us010-beta" 1`] = `
{
  "abandonmentDetails": [
    {
      "cssClass": "abandonment-counter",
      "id": "dead-counter",
      "label": "You are visitor #46338",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "broken-badge",
      "label": "Made with Macromedia Dreamweaver",
    },
    {
      "cssClass": "abandonment-browser-notice",
      "id": "deprecated-browser-notice",
      "label": "This page requires Shockwave Flash",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "broken-badge",
      "label": "Valid HTML 4.01 Transitional",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "broken-badge",
      "label": "Hosted on Geocities",
    },
  ],
  "archetype": {
    "compatibleEraIds": [
      "early-web",
      "portal-era",
      "web2",
      "startup-minimalism",
    ],
    "compatibleRegionIds": [
      "en-us",
      "de-de",
      "en-gb",
    ],
    "description": "A low-cost carrier homepage with flight search and garish promotions",
    "id": "budget-airline",
    "label": "Budget Airline",
  },
  "backgroundPattern": {
    "css": "radial-gradient(1px 1px at 10% 20%, #fff 50%, transparent 50%), radial-gradient(1px 1px at 40% 70%, #ccc 50%, transparent 50%), radial-gradient(1px 1px at 70% 30%, #fff 50%, transparent 50%), radial-gradient(1px 1px at 85% 80%, #aaa 50%, transparent 50%), radial-gradient(1px 1px at 25% 55%, #ddd 50%, transparent 50%), #0a0a2e",
    "dark": true,
    "id": "ew-starfield",
  },
  "era": {
    "designCues": {
      "colors": [
        "#000080",
        "#C0C0C0",
        "#FFFF00",
        "#FF00FF",
        "#008080",
      ],
      "layoutPatterns": [
        "single-column",
        "table-layout",
        "frames",
      ],
      "typography": [
        "Times New Roman",
        "Comic Sans MS",
        "Courier New",
      ],
      "uiElements": [
        "marquee",
        "bevel-buttons",
        "horizontal-rule",
        "animated-gifs",
        "hit-counter",
      ],
    },
    "id": "early-web",
    "label": "Early Web",
    "vocabularyCues": [
      "under construction",
      "welcome to my homepage",
      "guestbook",
      "webring",
      "best viewed in",
      "click here",
      "last updated",
      "site map",
    ],
    "yearEnd": 1999,
    "yearStart": 1995,
  },
  "metadata": {
    "closureReason": "Abandoned after the sole developer moved abroad",
    "siteName": "SunFlights",
    "statusLabel": "Page archived for reference only",
    "summary": "Book cheap flights and holiday packages with SunFlights. The airline partnered with regional hotels to offer all-inclusive getaways and briefly experimented with a frequent flyer loyalty card before quietly discontinuing it.",
    "tagline": "Fly for less",
    "yearFounded": 1997,
  },
  "region": {
    "currencySymbol": "$",
    "id": "en-us",
    "label": "United States",
    "language": "en",
    "tld": ".com",
    "vocabularyOverrides": {},
  },
  "seed": "snap-us010-beta",
  "theme": {
    "borders": {
      "color": "#808080",
      "radius": 0,
      "style": "outset",
      "width": 2,
    },
    "id": "early-web",
    "label": "Early Web",
    "palette": {
      "accent": "#FFFF00",
      "background": "#FFFFFF",
      "muted": "#808080",
      "primary": "#000080",
      "secondary": "#C0C0C0",
      "surface": "#C0C0C0",
      "text": "#000000",
    },
    "spacing": {
      "large": 16,
      "medium": 8,
      "sectionGap": 24,
      "small": 4,
      "unit": 4,
    },
    "surfaces": {
      "background": "solid",
      "shadow": "none",
      "texture": "",
    },
    "typography": {
      "baseFontSize": 14,
      "fontFamily": "Times New Roman, serif",
      "headingFont": "Comic Sans MS, cursive",
      "headingWeight": 700,
      "lineHeight": 1.4,
      "monoFont": "Courier New, monospace",
    },
  },
}
`;

exports[`US-010: Render base generated homepage structure > snapshot stability > generateSite snapshot for seed "snap-us010-gamma" 1`] = `
{
  "abandonmentDetails": [
    {
      "cssClass": "abandonment-missing-asset",
      "id": "missing-asset-placeholder",
      "label": "[Image not found]",
    },
    {
      "cssClass": "abandonment-browser-notice",
      "id": "deprecated-browser-notice",
      "label": "Adobe Flash Player required",
    },
    {
      "cssClass": "abandonment-partner-logos",
      "id": "defunct-partner-logo",
      "label": "In association with Yahoo! GeoCities",
    },
    {
      "cssClass": "abandonment-missing-asset",
      "id": "missing-asset-placeholder",
      "label": "[Logo failed to load]",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "stale-news-date",
      "label": "Last updated: 03/12/2001",
    },
  ],
  "archetype": {
    "compatibleEraIds": [
      "early-web",
      "portal-era",
      "web2",
      "startup-minimalism",
    ],
    "compatibleRegionIds": [
      "en-us",
      "de-de",
      "en-gb",
    ],
    "description": "A low-cost carrier homepage with flight search and garish promotions",
    "id": "budget-airline",
    "label": "Budget Airline",
  },
  "backgroundPattern": {
    "css": "radial-gradient(circle, #ccc 1px, transparent 1px), #f9f9f9",
    "dark": false,
    "id": "pe-dotted",
  },
  "era": {
    "designCues": {
      "colors": [
        "#336699",
        "#FF6600",
        "#FFFFFF",
        "#EEEEEE",
        "#003366",
      ],
      "layoutPatterns": [
        "three-column",
        "portal-grid",
        "sidebar-nav",
      ],
      "typography": [
        "Verdana",
        "Arial",
        "Tahoma",
      ],
      "uiElements": [
        "dropdown-menus",
        "search-bar",
        "tabbed-content",
        "visitor-counter",
        "breadcrumbs",
      ],
    },
    "id": "portal-era",
    "label": "Portal Era",
    "vocabularyCues": [
      "powered by",
      "RSS feed",
      "add to favorites",
      "printer-friendly",
      "sign up free",
      "community",
      "forums",
      "newsletter",
    ],
    "yearEnd": 2006,
    "yearStart": 2000,
  },
  "metadata": {
    "closureReason": "Superseded by competitor",
    "siteName": "TransArc",
    "statusLabel": "Page archived for reference only",
    "summary": "TransArc connected travelers to destinations they never expected. Seasonal routes to lesser-known airports in southern Europe made the airline a cult favorite among adventurous travelers looking to skip the tourist hubs.",
    "tagline": undefined,
    "yearFounded": 2001,
  },
  "region": {
    "currencySymbol": "$",
    "id": "en-us",
    "label": "United States",
    "language": "en",
    "tld": ".com",
    "vocabularyOverrides": {},
  },
  "seed": "snap-us010-gamma",
  "theme": {
    "borders": {
      "color": "#CCCCCC",
      "radius": 3,
      "style": "solid",
      "width": 1,
    },
    "id": "portal-era",
    "label": "Portal Era",
    "palette": {
      "accent": "#003366",
      "background": "#FFFFFF",
      "muted": "#999999",
      "primary": "#336699",
      "secondary": "#FF6600",
      "surface": "#EEEEEE",
      "text": "#333333",
    },
    "spacing": {
      "large": 20,
      "medium": 10,
      "sectionGap": 30,
      "small": 4,
      "unit": 4,
    },
    "surfaces": {
      "background": "linear-gradient(to bottom, #FFFFFF, #F0F0F0)",
      "shadow": "1px 1px 3px rgba(0,0,0,0.15)",
      "texture": "",
    },
    "typography": {
      "baseFontSize": 12,
      "fontFamily": "Verdana, Geneva, sans-serif",
      "headingFont": "Arial, Helvetica, sans-serif",
      "headingWeight": 700,
      "lineHeight": 1.5,
      "monoFont": "Courier New, monospace",
    },
  },
}
`;
